--- a/src/components/header/assets/Header.css
+++ b/src/components/header/assets/Header.css
@@ -12,9 +12,11 @@ div.menu-item {
 }
 
 h1.logo {
-  padding: .5em 1.5em;
+  /* padding: .5em 1.5em; */
   text-decoration: none;
-  font-size: 1.5vw;
+  color: #161a23;
+  font-size: 2.5vw;
+  /* text-decoration: underline; */
   line-height: 3.67;
   text-align: left;
 }
