--- a/client/components/subscribe-form/assets/Subscribe.css
+++ b/client/components/subscribe-form/assets/Subscribe.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3vw;
+    padding: 3%;
     position: relative;
 }
 
-.email-block {
+/* .email-block {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
+} */
