--- a/client/components/steps/assets/css/StepsDesc.css
+++ b/client/components/steps/assets/css/StepsDesc.css
@@ -3,6 +3,7 @@
     width: 50%;
 }
 
+
 .step-block {
     display: flex;
     flex-direction: row;
@@ -28,3 +29,21 @@
     line-height: 1.6;
     font-size: 1.6vw;
 }
+
+@media screen and (max-width: 480px) {
+    .step-block  {
+        flex-direction: column;
+    }
+    .step-content {
+        margin-top: 3%;
+        margin-bottom: 5%;
+
+    }
+
+    .step-block>div {
+        width: 80%;
+    }
+    .odd {
+        flex-direction: column-reverse;
+    }
+  }
