--- a/client/components/subscribe-form/assets/css/SubmitButton.css
+++ b/client/components/subscribe-form/assets/css/SubmitButton.css
@@ -13,7 +13,7 @@
 [type="button"] img {
     display: inline-block;
     width: 3.3vw;
-    height: 5.4vh;
+    height: 2.8vw;
     font-size: 0;
     
 }
